fixed overflowing sections

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,6 +7,9 @@
     .about-containers{
         flex-wrap: wrap;
     }
+    #contacts, #projects{
+        height:fit-content
+    }
 }
 
 
